# DBTool

./: .gitignore  CMakeLists.txt  README.md  cppan.yml  sw.cpp
.github/workflows/: sw.yml
res/: en_US.ts  et_EE.ts  qm.qrc  rc.qrc  res.rc  ru_RU.ts
src/: CMakeLists.txt  appsettings.cpp  appsettings.h  main.cpp  mainwindow.cpp  mainwindow.h  qdatabaseitemmodel.cpp  qdatabaseitemmodel.h  qlabeledlistwidget.cpp  qlabeledlistwidget.h  qsignalleditemdelegate.h  translate.cpp  version.cpp  version.h
src/resources/: en_US.ts  qm.qrc  rc.qrc  res.aps  ru_RU.ts
